2010-04-21  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* NEWS: updated
	* peripheral/ps2kbd.c (kbd_reset): Bug 1723 fixed.

2010-04-21  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* AUTHORS: Corrected spelling of Mark Jarvin.
	* debug/rsp-server.c (rsp_get_client): Set len before calling
	  accept ().

2010-04-20  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* cache/icache-model.c (ic_end_sec): Use -1 as the invalid tag value.

2010-04-20  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* doc/or1ksim.texi: Updated with new testing instructions.
	* README: Updated.
	* configure.ac: Check for rl_event_hook declaration.
	* sim-cmd.c (initialize_readline): Only use rl_event_hook if it's
	  available.
	* peripheral/atadevice.c: Added conditional includes for Apple	MAC.
	* port/strndup.c: Include stddef.h to define size_t.

2010-04-20  Jeremy Bennett <jeremy.bennett@embecosm.com>
	* cpu/or1k/spr-defs.h: NOP_PRINTF removed.
	* support/simprintf.h, support/simprintf.h: Deleted
	* support/dbchs.h: simprintf channel removed.
	* support/Makefile.am: References to simprintf.* removed.
	* cpu/or32/generate.c (generate_body): Generate exception for
	  illegal instructions.
	* cpu/or32/insnset.c: NOP_PRINTF and stackaddr removed.
	* cpu/or32/execute.c (evalsim_reg): Remove simprintf reference.
	* peripheral/channels/xterm.c (xterm_open): write result used.
	* peripheral/generic.c (htoml): Fixed punning dereference.
	* peripheral/generic.c (htoms): Fixed punning dereference.
	* peripheral/generic.c (generic_read_byte): Fixed punning dereference.
	* peripheral/generic.c (generic_write_byte): Fixed punning dereference.
	* peripheral/generic.c (generic_read_hw): Fixed punning dereference.
	* peripheral/generic.c (generic_write_hw): Fixed punning dereference.
	* peripheral/atadevice.c (ata_devices_read): Clarified precedence.
	* peripheral/atadevice.c (ata_devices_write): Clarified precedence.
	* peripheral/atadevice-cmdi.c (ata_read_sect): fread result used.